src/lib/envspec/parsing/envspecParser.js
// @generated by Peggy 5.1.0.
//
// https://peggyjs.org/

"use strict";

class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Document: peg$parseDocument,
  };
  let peg$startRuleFunction = peg$parseDocument;

  const peg$c0 = "file";
  const peg$c1 = "do";
  const peg$c2 = "end";
  const peg$c3 = "strict";
  const peg$c4 = "\"";
  const peg$c5 = "'";
  const peg$c6 = "env";
  const peg$c7 = ",";
  const peg$c8 = "proxy";
  const peg$c9 = ":";
  const peg$c10 = "required";
  const peg$c11 = "optional";
  const peg$c12 = "redacted";
  const peg$c13 = "redact";
  const peg$c14 = "encrypted";
  const peg$c15 = "encrypt";
  const peg$c16 = "type";
  const peg$c17 = "enum";
  const peg$c18 = "min";
  const peg$c19 = "max";
  const peg$c20 = "[";
  const peg$c21 = "]";
  const peg$c22 = "\\";
  const peg$c23 = "\"integer\"";
  const peg$c24 = "'integer'";
  const peg$c25 = "\"boolean\"";
  const peg$c26 = "'boolean'";
  const peg$c27 = "\"port\"";
  const peg$c28 = "'port'";
  const peg$c29 = "\"url\"";
  const peg$c30 = "'url'";
  const peg$c31 = "\"email\"";
  const peg$c32 = "'email'";
  const peg$c33 = "\"ip\"";
  const peg$c34 = "'ip'";
  const peg$c35 = "true";
  const peg$c36 = "{";
  const peg$c37 = "domain";
  const peg$c38 = "}";
  const peg$c39 = "false";
  const peg$c40 = "#";
  const peg$c41 = "\r\n";

  const peg$r0 = /^[ \t]/;
  const peg$r1 = /^[^"\r\n\0]/;
  const peg$r2 = /^[^'\r\n\0]/;
  const peg$r3 = /^[+\-]/;
  const peg$r4 = /^[0-9]/;
  const peg$r5 = /^[^"\\\r\n]/;
  const peg$r6 = /^[^'\\\r\n]/;
  const peg$r7 = /^["'\\nrt]/;
  const peg$r8 = /^[A-Za-z0-9.\-]/;
  const peg$r9 = /^[A-Za-z_]/;
  const peg$r10 = /^[A-Za-z0-9_]/;
  const peg$r11 = /^[^\r\n]/;
  const peg$r12 = /^[\n\r]/;

  const peg$e0 = peg$literalExpectation("file", false);
  const peg$e1 = peg$classExpectation([" ", "\t"], false, false, false);
  const peg$e2 = peg$literalExpectation("do", false);
  const peg$e3 = peg$literalExpectation("end", false);
  const peg$e4 = peg$anyExpectation();
  const peg$e5 = peg$literalExpectation("strict", false);
  const peg$e6 = peg$otherExpectation("a quoted filename");
  const peg$e7 = peg$literalExpectation("\"", false);
  const peg$e8 = peg$classExpectation(["\"", "\r", "\n", "\0"], true, false, false);
  const peg$e9 = peg$literalExpectation("'", false);
  const peg$e10 = peg$classExpectation(["'", "\r", "\n", "\0"], true, false, false);
  const peg$e11 = peg$literalExpectation("env", false);
  const peg$e12 = peg$literalExpectation(",", false);
  const peg$e13 = peg$literalExpectation("proxy", false);
  const peg$e14 = peg$literalExpectation(":", false);
  const peg$e15 = peg$literalExpectation("required", false);
  const peg$e16 = peg$literalExpectation("optional", false);
  const peg$e17 = peg$literalExpectation("redacted", false);
  const peg$e18 = peg$literalExpectation("redact", false);
  const peg$e19 = peg$literalExpectation("encrypted", false);
  const peg$e20 = peg$literalExpectation("encrypt", false);
  const peg$e21 = peg$literalExpectation("type", false);
  const peg$e22 = peg$literalExpectation("enum", false);
  const peg$e23 = peg$literalExpectation("min", false);
  const peg$e24 = peg$literalExpectation("max", false);
  const peg$e25 = peg$otherExpectation("an integer");
  const peg$e26 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e27 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e28 = peg$literalExpectation("[", false);
  const peg$e29 = peg$literalExpectation("]", false);
  const peg$e30 = peg$classExpectation(["\"", "\\", "\r", "\n"], true, false, false);
  const peg$e31 = peg$classExpectation(["'", "\\", "\r", "\n"], true, false, false);
  const peg$e32 = peg$literalExpectation("\\", false);
  const peg$e33 = peg$classExpectation(["\"", "'", "\\", "n", "r", "t"], false, false, false);
  const peg$e34 = peg$otherExpectation("a supported type (integer, boolean, port, url, email, or ip)");
  const peg$e35 = peg$literalExpectation("\"integer\"", false);
  const peg$e36 = peg$literalExpectation("'integer'", false);
  const peg$e37 = peg$literalExpectation("\"boolean\"", false);
  const peg$e38 = peg$literalExpectation("'boolean'", false);
  const peg$e39 = peg$literalExpectation("\"port\"", false);
  const peg$e40 = peg$literalExpectation("'port'", false);
  const peg$e41 = peg$literalExpectation("\"url\"", false);
  const peg$e42 = peg$literalExpectation("'url'", false);
  const peg$e43 = peg$literalExpectation("\"email\"", false);
  const peg$e44 = peg$literalExpectation("'email'", false);
  const peg$e45 = peg$literalExpectation("\"ip\"", false);
  const peg$e46 = peg$literalExpectation("'ip'", false);
  const peg$e47 = peg$otherExpectation("true or false");
  const peg$e48 = peg$literalExpectation("true", false);
  const peg$e49 = peg$literalExpectation("{", false);
  const peg$e50 = peg$literalExpectation("domain", false);
  const peg$e51 = peg$literalExpectation("}", false);
  const peg$e52 = peg$literalExpectation("false", false);
  const peg$e53 = peg$otherExpectation("a quoted domain");
  const peg$e54 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], ".", "-"], false, false, false);
  const peg$e55 = peg$otherExpectation("a quoted variable name");
  const peg$e56 = peg$classExpectation([["A", "Z"], ["a", "z"], "_"], false, false, false);
  const peg$e57 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_"], false, false, false);
  const peg$e58 = peg$literalExpectation("#", false);
  const peg$e59 = peg$classExpectation(["\r", "\n"], true, false, false);
  const peg$e60 = peg$literalExpectation("\r\n", false);
  const peg$e61 = peg$classExpectation(["\n", "\r"], false, false, false);

  function peg$f0(entries) {
    const items = entries.map(item => item[0]);
    const settings = items.filter(item => item.strict !== undefined && !item.file);
    if (settings.length > 1) error("Duplicate Envfile setting: strict");
    return { ...settings[0], declarations: items.filter(item => item.name), files: items.filter(item => item.file) };
  }
  function peg$f1(file, entries) {
    const items = entries.map(item => item[0]);
    const settings = items.filter(item => item.strict !== undefined);
    if (settings.length > 1) error("Duplicate Envfile setting: strict");
    return { file, ...settings[0], declarations: items.filter(item => item.name) };
  }
  function peg$f2(value) {    return { strict: value };  }
  function peg$f3(value) {    return value;  }
  function peg$f4(value) {    return value;  }
  function peg$f5(name, options) {
    const declaration = { name };
    const seen = new Set();
    for (const option of options) {
      if (seen.has(option.key)) error(`Duplicate Envfile option: ${option.key}`);
      if ((option.key === "optional" && seen.has("required")) ||
          (option.key === "required" && seen.has("optional"))) {
        error("Cannot combine required and optional in an Envfile declaration");
      }
      seen.add(option.key);
      if (option.key === "optional") declaration.required = !option.value;
      else declaration[option.key] = option.value;
    }
    return declaration;
  }
  function peg$f6(value) {    return { key: "proxy", value };  }
  function peg$f7(value) {    return { key: "required", value };  }
  function peg$f8(value) {    return { key: "optional", value };  }
  function peg$f9(value) {    return { key: "redacted", value };  }
  function peg$f10(value) {    return { key: "encrypted", value };  }
  function peg$f11(value) {    return { key: "type", value };  }
  function peg$f12(value) {    return { key: "enum", value };  }
  function peg$f13(key, value) {    return { key, value };  }
  function peg$f14(value) {    return value;  }
  function peg$f15(first, value) {    return value;  }
  function peg$f16(first, rest) {
    return [first, ...rest];
  }
  function peg$f17(chars) {    return chars.join("");  }
  function peg$f18(chars) {    return chars.join("");  }
  function peg$f19(char) {
    return ({ n: "\n", r: "\r", t: "\t" })[char] || char;
  }
  function peg$f20() {    return "integer";  }
  function peg$f21() {    return "boolean";  }
  function peg$f22() {    return "port";  }
  function peg$f23() {    return "url";  }
  function peg$f24() {    return "email";  }
  function peg$f25() {    return "ip";  }
  function peg$f26() {    return true;  }
  function peg$f27(domain) {    return { domain };  }
  function peg$f28() {    return false;  }
  function peg$f29(host) {    return host;  }
  function peg$f30(host) {    return host;  }
  function peg$f31(name) {    return name;  }
  function peg$f32(name) {    return name;  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = [];
    s3 = peg$currPos;
    s4 = peg$parseFileBlock();
    if (s4 === peg$FAILED) {
      s4 = peg$parseDeclaration();
      if (s4 === peg$FAILED) {
        s4 = peg$parseStrict();
      }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s4 = [s4, s5];
      s3 = s4;
    } else {
      peg$currPos = s3;
      s3 = peg$FAILED;
    }
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$currPos;
      s4 = peg$parseFileBlock();
      if (s4 === peg$FAILED) {
        s4 = peg$parseDeclaration();
        if (s4 === peg$FAILED) {
          s4 = peg$parseStrict();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s4 = [s4, s5];
        s3 = s4;
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseFileBlock() {
    let s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r0.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = input.charAt(peg$currPos);
          if (peg$r0.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseFilename();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = input.charAt(peg$currPos);
          if (peg$r0.test(s5)) {
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          if (s5 !== peg$FAILED) {
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = input.charAt(peg$currPos);
              if (peg$r0.test(s5)) {
                peg$currPos++;
              } else {
                s5 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e1); }
              }
            }
          } else {
            s4 = peg$FAILED;
          }
          if (s4 !== peg$FAILED) {
            if (input.substr(peg$currPos, 2) === peg$c1) {
              s5 = peg$c1;
              peg$currPos += 2;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e2); }
            }
            if (s5 !== peg$FAILED) {
              s6 = [];
              s7 = input.charAt(peg$currPos);
              if (peg$r0.test(s7)) {
                peg$currPos++;
              } else {
                s7 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e1); }
              }
              while (s7 !== peg$FAILED) {
                s6.push(s7);
                s7 = input.charAt(peg$currPos);
                if (peg$r0.test(s7)) {
                  peg$currPos++;
                } else {
                  s7 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e1); }
                }
              }
              s7 = peg$parseComment();
              if (s7 === peg$FAILED) {
                s7 = null;
              }
              s8 = peg$parseNewline();
              if (s8 !== peg$FAILED) {
                s9 = peg$parse_();
                s10 = [];
                s11 = peg$currPos;
                s12 = peg$parseDeclaration();
                if (s12 === peg$FAILED) {
                  s12 = peg$parseStrict();
                }
                if (s12 !== peg$FAILED) {
                  s13 = peg$parse_();
                  s12 = [s12, s13];
                  s11 = s12;
                } else {
                  peg$currPos = s11;
                  s11 = peg$FAILED;
                }
                while (s11 !== peg$FAILED) {
                  s10.push(s11);
                  s11 = peg$currPos;
                  s12 = peg$parseDeclaration();
                  if (s12 === peg$FAILED) {
                    s12 = peg$parseStrict();
                  }
                  if (s12 !== peg$FAILED) {
                    s13 = peg$parse_();
                    s12 = [s12, s13];
                    s11 = s12;
                  } else {
                    peg$currPos = s11;
                    s11 = peg$FAILED;
                  }
                }
                if (input.substr(peg$currPos, 3) === peg$c2) {
                  s11 = peg$c2;
                  peg$currPos += 3;
                } else {
                  s11 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e3); }
                }
                if (s11 !== peg$FAILED) {
                  s12 = [];
                  s13 = input.charAt(peg$currPos);
                  if (peg$r0.test(s13)) {
                    peg$currPos++;
                  } else {
                    s13 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e1); }
                  }
                  while (s13 !== peg$FAILED) {
                    s12.push(s13);
                    s13 = input.charAt(peg$currPos);
                    if (peg$r0.test(s13)) {
                      peg$currPos++;
                    } else {
                      s13 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e1); }
                    }
                  }
                  s13 = peg$parseComment();
                  if (s13 === peg$FAILED) {
                    s13 = null;
                  }
                  s14 = peg$parseNewline();
                  if (s14 === peg$FAILED) {
                    s14 = peg$currPos;
                    peg$silentFails++;
                    if (input.length > peg$currPos) {
                      s15 = input.charAt(peg$currPos);
                      peg$currPos++;
                    } else {
                      s15 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e4); }
                    }
                    peg$silentFails--;
                    if (s15 === peg$FAILED) {
                      s14 = undefined;
                    } else {
                      peg$currPos = s14;
                      s14 = peg$FAILED;
                    }
                  }
                  if (s14 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f1(s3, s10);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseStrict() {
    let s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 6) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 6;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = input.charAt(peg$currPos);
      if (peg$r0.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 !== peg$FAILED) {
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = input.charAt(peg$currPos);
          if (peg$r0.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
        }
      } else {
        s2 = peg$FAILED;
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parseBoolean();
        if (s3 !== peg$FAILED) {
          s4 = [];
          s5 = input.charAt(peg$currPos);
          if (peg$r0.test(s5)) {
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e1); }
          }
          while (s5 !== peg$FAILED) {
            s4.push(s5);
            s5 = input.charAt(peg$currPos);
            if (peg$r0.test(s5)) {
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e1); }
            }
          }
          s5 = peg$parseComment();
          if (s5 === peg$FAILED) {
            s5 = null;
          }
          s6 = peg$parseNewline();
          if (s6 === peg$FAILED) {
            s6 = peg$currPos;
            peg$silentFails++;
            if (input.length > peg$currPos) {
              s7 = input.charAt(peg$currPos);
              peg$currPos++;
            } else {
              s7 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            peg$silentFails--;
            if (s7 === peg$FAILED) {
              s6 = undefined;
            } else {
              peg$currPos = s6;
              s6 = peg$FAILED;
            }
          }
          if (s6 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f2(s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseFilename() {
    let s0, s1, s2, s3, s4;
